# alertlidemo1

./: README.md  pyproject.toml
src/alertli2/: crew.py  main.py
src/alertli2/config/: agents.yaml  tasks.yaml
