[project]
name = "alertli2"
version = "0.1.0"
description = "alertli2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "docling>=2.26.0",
    "google-generativeai>=0.8.4",
    "pydantic>=2.10.6",
]

[project.scripts]
alertli2 = "alertli2.main:run"
run_crew = "alertli2.main:run"
train = "alertli2.main:train"
replay = "alertli2.main:replay"
test = "alertli2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
